# uuid_cli

./: CLAUDE.md  Cargo.toml  README.md  code-of-conduct.txt
.github/workflows/: ci.yml  publish.yml
src/: lib.rs  main.rs
