[package]
name = "uuid_cli"
version = "0.1.0"
authors = ["Kellen Frodelius-Fujimoto <kellen@kellenfujimoto.com>"]
edition = "2018"
description = "A command line utility for genrating UUIDs"
keywords = ["uuid", "utils", "guid", "unique"]
categories = ["command-line-utilities"]
repository = "https://github.com/rakenodiax/uuid_cli"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[[bin]]
name = "uuid"
path = "src/main.rs"

[dependencies]
uuid = { version = "^0.8", features = ["v4"] }
