[package]
name = "uuid_cli"
version = "0.1.1"
authors = ["Kellen Frodelius-Fujimoto <kellen@kellenfujimoto.com>"]
edition = "2021"
description = "A command line utility for generating UUIDs"
keywords = ["uuid", "utils", "guid", "unique"]
categories = ["command-line-utilities"]
repository = "https://github.com/rakenodiax/uuid_cli"
readme = "README.md"
license = "Apache-2.0 OR MIT"
default-run = "uuid"

[[bin]]
name = "uuid"
path = "src/main.rs"

[dependencies]
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
